--- a/oops/oop.ipynb
+++ b/oops/oop.ipynb
@@ -85,16 +85,18 @@
    "id": "195eecf2-88df-4c7d-85a5-fdaef35aabc4",
    "metadata": {},
    "source": [
-    "### How to create class and Objects?"
+    "### How to create class and Objects?\n",
+    "\n",
+    "- user case : I want to hide sensitive data so other's can't directly access or change it ."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "290c8bee-b84a-49b3-b6f8-3f4743eee0a1",
+   "cell_type": "markdown",
+   "id": "b33deede-4d80-46de-a3ae-48f745e3df03",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Encaptulation"
+   ]
   },
   {
    "cell_type": "code",
@@ -102,87 +104,149 @@
    "id": "05bb6d9a-084d-41aa-8676-08de578322b9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SecureUser:\n",
+    "    name = None\n",
+    "    atm_pin = None\n",
+    "    def get_pin(attempt):\n",
+    "        return attempt == atm_pin\n",
+    "    def deposit_cash():\n",
+    "        pass\n",
+    "    def cash_withdrawal():\n",
+    "        pass\n",
+    "        "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d84a907-b323-436e-a46b-8337eca44e1d",
+   "cell_type": "markdown",
+   "id": "e1133b24-c160-43d3-b6b4-568c11d1548e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Note :\n",
+    "\n",
+    "**Importance of Self and init Comes into the picture**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b69bbeb-8c18-495d-9539-f7bc85cc596b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e263c350-87d5-472a-a434-3d3c26888690",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SecureUser:\n",
+    "    def __init__(self,name,atm_pin):\n",
+    "        self.name = name\n",
+    "        self.atm_pin = atm_pin\n",
+    "    def get_pin(self,attempt):\n",
+    "        return attempt == self.atm_pin\n",
+    "\n",
+    "    def deposit_cash(self):\n",
+    "        pass\n",
+    "\n",
+    "    def cash_withdrawal(self):\n",
+    "        pass\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2fc04ee7-4691-4622-aa45-a56ea5f727b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "allan_data=SecureUser(\"Allan\",1234)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "83c2f416-3254-46a7-8fc6-be847cbfd5bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allan_data.get_pin(1234)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "63ea906a-2194-4f34-81a2-c5fb6741b0c4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1234"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allan_data.atm_pin"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "5e851eb6-427e-4e63-a8d8-27ae66b43b8c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# to secure a Atm pin \n",
+    "\n",
+    "class SecureUser:\n",
+    "    def __init__(self, name, atm_pin):\n",
+    "        self.name = name\n",
+    "        self.__atm_pin = atm_pin   # Private variable\n",
+    "\n",
+    "    def get_pin(self, attempt):\n",
+    "        return attempt == self.__atm_pin\n",
+    "\n",
+    "    def deposit_cash(self):\n",
+    "        pass\n",
+    "\n",
+    "    def cash_withdrawal(self):\n",
+    "        pass\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8bcf6f5d-c7ce-4667-917b-65637f3de1a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ff05aa6-1126-4429-8296-4cd9742c3c36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "bb4a94d6-f022-4cce-aafe-4d90049abee4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SecureUser' object has no attribute '__atm_pin'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m allan_data\u001b[38;5;241m.\u001b[39m__atm_pin\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'SecureUser' object has no attribute '__atm_pin'"
+     ]
+    }
+   ],
+   "source": [
+    "allan_data.__atm_pin\n"
+   ]
   },
   {
    "cell_type": "code",
